# Copyright 2026 The Lynx Authors. All rights reserved.
# Licensed under the Apache License Version 2.0 that can be found in the
# LICENSE file in the root directory of this source tree.

# Default (OSS) implementation.
mts_context_factory_sources =
    rebase_path([ "../core/runtime/mts_context_factory.cc" ])
