# Copyright 2025 The Lynx Authors. All rights reserved.
# Licensed under the Apache License Version 2.0 that can be found in the
# LICENSE file in the root directory of this source tree.

assert(is_win)

static_library("lynx_base") {
  sources = [
    "lynx_base_env.cc",
    "lynx_base_env.h",
  ]
  public_deps = [ "../../src:base" ]
}
