# Copyright 2024 The Lynx Authors. All rights reserved.
# Licensed under the Apache License Version 2.0 that can be found in the
# LICENSE file in the root directory of this source tree.

import("../../../testing/test.gni")
import("../../Lynx.gni")

basic_animation_shared_sources = [
  "animation_effect.cc",
  "animation_effect.h",
  "animation_effect_timing.cc",
  "animation_effect_timing.h",
  "animation_event_listener.h",
  "animation_frame_callback.h",
  "animation_frame_callback_provider.h",
  "animation_timeline.cc",
  "animation_timeline.h",
  "animator_target.h",
  "basic_animatable_values/color_property_value.cc",
  "basic_animatable_values/color_property_value.h",
  "basic_animatable_values/float_property_value.cc",
  "basic_animatable_values/float_property_value.h",
  "basic_animatable_values/int_property_value.cc",
  "basic_animatable_values/int_property_value.h",
  "basic_animation.cc",
  "basic_animation.h",
  "basic_animation_curve.cc",
  "basic_animation_curve.h",
  "basic_keyframe_effect.cc",
  "basic_keyframe_effect.h",
  "basic_keyframe_model.cc",
  "basic_keyframe_model.h",
  "keyframe.cc",
  "keyframe.h",
  "property_value.h",
  "thread_local_animation_handler.cc",
  "thread_local_animation_handler.h",
]

lynx_core_source_set("basic_animation") {
  sources = basic_animation_shared_sources

  public_deps = [ "../utils:animation_utils" ]
}

unittest_set("basic_animation_testset") {
  testonly = true
  sources = [ "basic_animatable_values/animatable_values_unittest.cc" ]
  deps = []
  public_deps = [ ":basic_animation" ]
}

unittest_exec("basic_animation_unittests_exec") {
  testonly = true
  sources = []
  deps = [
    ":basic_animation",
    ":basic_animation_testset",
    "../../renderer/dom:dom",
  ]
}

group("basic_animation_tests") {
  testonly = true
  deps = [ ":basic_animation_unittests_exec" ]
  public_deps = [ ":basic_animation_testset" ]
}
